tests/tooling/fixtures/native/recovery/negative/negative_binary_literal_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeBinaryLiteralParserMissingRhs;

let value = 0b10 + ;

fn main() -> i32 {
  return 0;
}
